style.css
@font-face {
    font-family: 'FiraCode';
    src: url(fonts/Fira_Code/FiraCode-VariableFont_wght.ttf);
}

@font-face {
    font-family: 'Karla';
    src: url(./fonts/Karla/Karla-VariableFont_wght.ttf);
}

:root {
    --max-width: 1440px;
    --content-offset: 96px;
    --primary-background: #1C1C1C;
    --secondary-background: #08463B;
    --gradient-background: rgba(8, 70, 59, 0.51);
    --primary-text: #fff;
    --primary-accent: #D9D9D9;
    --secondary-text: #3DCFB6;
    --secondary-text-50percent: rgba(61, 207, 182, 0.5);
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: 'FiraCode', 'Courier New', monospace;
    background-color: var(--primary-background);
    color: var(--primary-text);
}

a{
    text-decoration: none;
    color: var(--primary-text);
}

#hero_wrapper{
    position: relative;
    overflow: hidden;
    height: 100dvh;
    background: linear-gradient(to bottom, var(--primary-background) 0%, transparent 10%),
    linear-gradient(to left bottom, var(--secondary-background) 0%, var(--primary-background) 50%);
    display: flex;
    flex-direction: column;
    align-items: stretch;
}

.container{
    display: flex;
    max-width: var(--max-width);
    margin: 0 auto;
}

/* #region header */

#container_header{
    height: 96px;
    align-items: center;
}

/* #region language switch */
#switch_container{
    display: flex;
    align-items: center;
}

.switch {
    position: relative;
    display: inline-block;
    width: 84px;
    height: 28px;
}

.switch input {
    display: none;
}

.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    border-radius: 50px;
    display: flex;
    align-items: center;
    justify-content: space-around;
    font-family: sans-serif;
    transition: 0.4s;
    border: 1px solid var(--secondary-text);
}

.slider::before {
    content: "";
    position: absolute;
    height: 28px;
    width: 44px;
    left: -1px;
    bottom: -1px;
    background-color: var(--secondary-text);
    border-radius: 40px;
    transition: 0.4s;
    z-index: 1;
}

#lang-toggle:checked+.slider::before {
    transform: translateX(40px);
}

.switch_text {
    z-index: 2;
    transition: 0.4s;
}

#lang-toggle:checked+.slider .text-en {
    color: var(--secondary-text-50percent);
}

#lang-toggle:not(:checked)+.slider .text-de {
    color: var(--secondary-text-50percent);
}
/* #endregion */

#menu_elements {
    padding: 0 20px;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

#menu_list {
    list-style: none;
    display: flex;
    gap: 24px;
}

#menu_list li {
    font-size: 20px;
}

/* #endregion */

#hero {
    display: flex;   
    flex-direction: column;
    align-items: center;
    justify-content: center;
    flex-grow: 1;
}

/* #region main */ 

h2{
    font-size: 40px;
    font-weight: 200;
    text-align: center;
}

h1{
    font-size: 128px;
    text-align: center;
}

.hero_btns{
    display: flex;
    gap: 48px;
}

/* #endregion */

/* #region button loop*/

.marquee-btn {
    overflow: hidden;
    position: relative;
    background: transparent;
    border: 1px solid var(--primary-text);
    border-radius: 40px;
    color: var(--primary-text);
    cursor: pointer;
}

#check_work_btn{
    width: 172px;
    height: 48px;
}

#contact_btn{
    width: 143px;
    height: 48px;
}

.marquee-inner {
    display: flex;
    width: 200%;
    position: absolute;
    left: 0;
    top: 50%;
    transition: transform 2s ease-out;
    transform: translate(0, -50%);
}

.marquee-inner span {
    width: 50%;
    flex-shrink: 0;
    text-align: center;
}

.marquee-btn:hover .marquee-inner {
    animation: marqueeLoop 3s linear infinite;
    transition: transform 0s; 
}

@keyframes marqueeLoop {
    0% { transform: translate(0, -50%); }
    100% { transform: translate(-50%, -50%); }
}

/* #endregion */

/* #region Textbanner */

.ticker-wrapper {
    position: absolute;
    z-index: 10;
    bottom: 50px;
    left: -5%;
    width: 110%;
    overflow: hidden;
    background-color: rgba(255, 255, 255, 0.05);
    backdrop-filter: blur(1px);
    -webkit-backdrop-filter: blur(8px);
    padding: 12px 0;
    transform: rotate(-3deg);
    white-space: nowrap;
}

.ticker-content{
    display: flex;
    width: max-content;
    animation: marquee 10s linear infinite;
}

.ticker-content span{
    font-size: 32px;
    color: var(--secondary-text);
    padding: 0 8px;
}

@keyframes marquee {
    0% { transform: translateX(0); }
    100% { transform: translateX(-50%); } /* Moves halfway so the second span takes over */
}

/* #endregion */

/* #region left scroll indicator*/

#indicator_container{
    position: absolute;
    z-index: 1;
    bottom: 0px;
    left: calc(50% - (var(--max-width) / 2) + var(--content-offset));
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 24px;
}

#scroll_indicator{
    border: 1px solid var(--secondary-text);
    border-radius: 20px;
    height: 48px;
    width: 30px;
    display: flex;
    justify-content: center;
    align-items: center;
}

#scroll_arrow{
    font-size: 14px;
    animation: arrowAnimation 2s ease-in-out infinite;
}

#indicator_line{
    background-color: var(--secondary-text);
    width: 1px;
    height: 240px;
}

@keyframes arrowAnimation {
    0% {transform: translateY(-6px);}
    50% {transform: translateY(6px);}
    100% {transform: translateY(-6px);}
}

/* #endregion */

/* #region socials right*/
#socials_container{
    display: flex;
    flex-direction: column-reverse;
    align-items: center;
    position: absolute;
    bottom: 0;
    right: calc(50% - (var(--max-width) / 2) + var(--content-offset));
    gap: 24px;
}

#socials_line{
    width: 1px;
    height: 186px;
    background-color: var(--secondary-text);
}

#svg_container{
    display: flex;
    flex-direction: column;
    gap: 12px;
}

#social_email{
    display: flex;
    justify-content: flex-start;
}

#social_email p {
    writing-mode: vertical-rl;
    transform: rotate(180deg);
}

/* #endregion */


@media (max-width: 1440px) {
    #indicator_container {
        left: var(--content-offset); 
    }

    #socials_container{
        right: var(--content-offset);
    }
}

